# Sample2Midi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-windows.bat  setup_thirdparty.sh
.github/workflows/: build-windows.yml
NeuralModel/: BasicPitch.cpp  BasicPitch.h  BasicPitchCNN.cpp  BasicPitchCNN.h  BasicPitchConstants.h  Features.cpp  Features.h  NoteUtils.h  Notes.cpp  Notes.h  Utils.h
Source/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioFileLoader.cpp  AudioFileLoader.h  MidiBuilder.cpp  MidiBuilder.h  MidiGenerator.cpp  MidiGenerator.h  NoteEditor.cpp  NoteEditor.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleQuantizer.cpp  ScaleQuantizer.h  SpectralDisplay.cpp  SpectralDisplay.h  WaveformDisplay.cpp  WaveformDisplay.h
